--- a/ExchangeToAccounting/Web.config
+++ b/ExchangeToAccounting/Web.config
@@ -6,7 +6,13 @@
   -->
 
 <configuration>
-
+  <system.webServer>
+    <handlers>
+      <add name="Handler"
+        verb="*" path="*" type="ExchangeToAccounting.Handler, ExchangeToAccounting"
+           preCondition="integratedMode,runtimeVersionv4.0"/>
+    </handlers>
+  </system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1"/>
     <httpRuntime targetFramework="4.7.1"/>
