--- a/ExchangeToAccounting/Web.config
+++ b/ExchangeToAccounting/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   Дополнительные сведения о настройке приложения ASP.NET см. на странице
@@ -6,18 +6,18 @@
   -->
 
 <configuration>
-  <system.webServer>
-    <handlers>
-      <add name="Handler"
-        verb="*" path="*" type="ExchangeToAccounting.Handler, ExchangeToAccounting"
-           preCondition="integratedMode,runtimeVersionv4.0"/>
-    </handlers>
-  </system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1"/>
     <httpRuntime targetFramework="4.7.1"/>
   </system.web>
+  <system.webServer>
+    <handlers>
+      <add name="Handler"
+           verb="*" path="*" type="HttpHandler"
+           preCondition="integratedMode,runtimeVersionv4.0"/>
+    </handlers>
+  </system.webServer>
   <connectionStrings>
-    <add name="Test" connectionString="Data Source=citppo3\sql2017;Initial Catalog=TEST;Integrated Security=True;User ID=EmK3zeQ5@pT$;Password=mI|$vakO$tZr0428u~JLsl57"/>
+    <add name="Test" connectionString="Data Source=citppo3\sql2017;Initial Catalog=TEST;Integrated Security=True;User ID=EmK3zeQ5@pT$;Password=mI|$vakO$tZr0428u~JLsl57; Max Pool Size=200;"/>
   </connectionStrings>
 </configuration>
